# RayTracingGL

./: BasicGeom.hpp  CCamera.cpp  CCamera.h  CKDTreeCPU.cpp  CKDTreeCPU.h  CLighter.cpp  CLighter.h  CMakeLists.txt  CParser.cpp  CParser.h  CRenderer.cpp  CRenderer.h  CScene.cpp  CScene.h  CSphere.cpp  CSphere.h  Geom.cpp  Geom.h  Geometry.hpp  GlutDrawer.cpp  GlutDrawer.h  IKDTree.cpp  IKDTree.h  IObject3D.h  IParser.cpp  IParser.h  Image.hpp  KDTree.hpp  Painting.cpp  Painting.h  Runner.hpp  config.lol  main.cpp  readme.md  smth.cpp
Geom/: Geom.cpp  Geom.h
KDTree/: CKDTreeCPU.cpp  CKDTreeCPU.h  IKDTree.h
Light/: CLighter.h
Objects/: CSphere.cpp  CSphere.h  IObject3D.cpp  IObject3D.h
Parser/: CParser.cpp  CParser.h  IParser.h
Rendering/: CRenderer.cpp  CRenderer.h
View/: CCamera.cpp  CCamera.h  CScene.cpp  CScene.h  GlutDrawer.cpp
containers/: Container.hpp  KDTree.hpp
figures/: Figure.hpp  Object.hpp  Sphere.hpp  Triangle.hpp
geometry/: BasicGeom.hpp
models/0/: lights.lamps  scene.stl
models/cannon/: cannon.l
models/eiffel/: eagle.stl  gyrocube_pyramid.stl
models/gnome/: gnome.l  gnome.stl
models/sphere/: sphere.l  sphere.stl
models/spheres_RT/: spheres.rt
models/vaza/: lights.lamps  vaza.stl
reading/: ConfigReader.hpp  LightsLoader.hpp  LightsReader.hpp  RTReader.hpp  STLReader.hpp
rendering/: Image.hpp  TGA.cpp  TGA.h
scene/: Body.hpp  Camera.hpp  LightSource.hpp  Scene.hpp
